--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./Assets/Svg/personal-logo.svg">
     <title>Resume</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-
-    </header>
-
     <main>
+        <section>
+            <div class="wrapper">
+                <div class="container">
+                    <h1>Curriculum Vitae</h1>
+                    <h2>Kevin Gomes Pardal Antunes</h2>
+                </div>
 
+                <div class="container">
+                    
+                </div>
+            </div>
+        </section>
     </main>
-
-    <footer>
-        
-    </footer>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
