--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
                 <div class="container">
                     <h1>Curriculum Vitae</h1>
                     <h2>Kevin Gomes Pardal Antunes</h2>
+                    <h3>Language | Langage | Sprache</h3>
                 </div>
 
                 <div class="container">
-                    
+                    <div class="flexbox-flag">
+                        <a href="./Public/gb.html"><img src="./Assets/Svg/gb.svg" alt="flag of the United Kingdom"></a>
+                        <a href="./Public/fr.html"><img src="./Assets/Svg/fr.svg" alt="flag of France"></a>
+                        <a href="./Public/de.html"><img src="./Assets/Svg/de.svg" alt="flag of Germany"></a>
+                    </div>
                 </div>
             </div>
         </section>
