--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./Assets/Svg/personal-logo.svg">
-    <title>Resume</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/Svg/favicon-logo.svg">
+    <title>CV - Kevin Gomes</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
