--- a/Public/gb.html
+++ b/Public/gb.html
@@ -42,7 +42,7 @@
 
     <main>
         <section id="hero">
-            <div class="wrapper grid-hero">
+            <div class="wrapper two-columns">
                 <div class="container">
                     <img src="../Assets/Img/cv-image.png" alt="Portait Image">
                 </div>
@@ -64,13 +64,20 @@
         </section>
 
         <section id="education">
-            <div class="wrapper grid">
+            <div class="wrapper">
                 <div class="container">
-                    
+                    <h2>Education</h2>
+                    <h3>Specialty</h3>
                 </div>
 
-                <div class="container">
-
+                <div class="two-columns">
+                    <div class="container">
+                        dfsdf
+                    </div>
+    
+                    <div class="container">
+                        dsfsdfsd
+                    </div>
                 </div>
             </div>
         </section>
